Polish Safetensors API.